--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -10,6 +10,6 @@
         <th>Età</th>
         <th>Actions</th>
     </tr>
-    <tr app-user *ngFor="let user of users" [user-data]="user" (onDeleteUser)="onDeleteUser($event)">
+    <tr app-user *ngFor="let user of users" [user-data]="user" (onDeleteUser)="onDeleteUser($event)" (onSelectUser)="onSelectUser($event)">
     </tr>
 </table>
