aggiunto bootstrap fontawesome e ngbootstrap

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -6,30 +6,30 @@
     </div>
     <div class="form-group">
         <label for="lastname">Last Name</label>
-        <input [(ngModel)]="user.lastName" type="text" id="lastname" name="lastname">
+        <input [(ngModel)]="user.lastName" type="text" id="lastname" name="lastname" class="form-control">
     </div>
     <div class="form-group">
         <label for="fiscalcode">Fiscal Code</label>
-        <input [(ngModel)]="user.fiscalCode" type="text" id="fiscalcode" name="fiscalcode">
+        <input [(ngModel)]="user.fiscalCode" type="text" id="fiscalcode" name="fiscalcode" class="form-control">
     </div>
     <div class="form-group">
         <label for="email">Email</label>
-        <input [(ngModel)]="user.email" type="email" id="email" name="email">
+        <input [(ngModel)]="user.email" type="email" id="email" name="email" class="form-control">
     </div>
     <div class="form-group">
         <label for="province">Province</label>
-        <input [(ngModel)]="user.province" type="text" id="province" name="province">
+        <input [(ngModel)]="user.province" type="text" id="province" name="province" class="form-control">
     </div>
     <div class="form-group">
         <label for="phone">Phone</label>
-        <input [(ngModel)]="user.phone" type="text" id="phone" name="phone">
+        <input [(ngModel)]="user.phone" type="text" id="phone" name="phone" class="form-control">
     </div>
     <div class="form-group">
         <label for="fiscalcode">Age</label>
-        <input [(ngModel)]="user.age" type="number" id="age" name="age">
+        <input [(ngModel)]="user.age" type="number" id="age" name="age" class="form-control">
     </div>
     <div class="form-group form-footer">
-        <button class="reset" (click)="resetForm(form.form)"> RESET</button>
-        <button type="submit" class="btn-save" (click)="saveUser()"> SAVE</button>
+        <button class="btn btn-secondary" (click)="resetForm(form.form)"> RESET</button>
+        <button type="submit" class="btn btn-success" (click)="saveUser()"> SAVE</button>
     </div>
 </form>
