--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
-<h1>User Management System</h1>
-<a href="#" (click)="newUser()">New User</a>
-<div class="main">
-
-    <div class="users">
-        <app-users (updateUser)="updateUser($event)"></app-users>
-    </div>
-    <div class="userDetail" *ngIf="showForm">
-        <app-user-detail [user]="userSelected"></app-user-detail>
+<app-nav (onNewUser)="newUser()"></app-nav>
+<div class="container-fluid">
+    <app-modal-basic></app-modal-basic>
+    <h1>User Management System</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <app-users (updateUser)="updateUser($event)"></app-users>
+        </div>
+        <div class="col-md-6" *ngIf="showForm">
+            <app-user-detail [user]="userSelected"></app-user-detail>
+        </div>
     </div>
 </div>
