--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,11 +1,17 @@
 <td>{{ user.name }}</td>
 <td>{{ user.lastName }}</td>
-<td>{{ user.fiscalCode }}</td>
 <td>{{ user.email }}</td>
 <td>{{ user.phone }}</td>
 <td>{{ user.province }}</td>
-<td>{{ user.age }}</td>
-<td>
-    <button class="update" (click)="updateUser()">UPDATE</button>
-    <button class="delete" (click)="deleteUser()">DELETE</button>
+<td class="buttons">
+    <div class="row">
+        <div class="col-sm-6">
+            <button class="btn btn-primary btn-sm" (click)="updateUser()">
+                    <fa name="pencil" size="1x"></fa></button>
+        </div>
+        <div class="col-sm-6">
+            <button class="btn btn-danger btn-sm" (click)="deleteUser()">
+                    <fa name="trash-o" size="1x"></fa></button>
+        </div>
+    </div>
 </td>
