--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
-<app-nav (onNewUser)="newUser()"></app-nav>
-<div class="container-fluid">
-    <app-modal-basic></app-modal-basic>
+<app-nav></app-nav>
+<div class="container">
     <h1>User Management System</h1>
     <div class="row">
-        <div class="col-md-6">
-            <app-users (updateUser)="updateUser($event)"></app-users>
-        </div>
-        <div class="col-md-6" *ngIf="showForm">
-            <app-user-detail [user]="userSelected"></app-user-detail>
+        <div class="col-12">
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
