--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -5,13 +5,17 @@
 <td>{{ user.province }}</td>
 <td class="buttons">
     <div class="row">
-        <div class="col-sm-6">
-            <button class="btn btn-primary btn-sm" (click)="updateUser()">
-                    <fa name="pencil" size="1x"></fa></button>
+        <div class="col-sm-4">
+            <button class="btn btn-success btn-sm" (click)="showUserDetail()">
+                        <fa name="info" fixed="true" size="1x"></fa></button>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-4">
+            <button class="btn btn-primary btn-sm" (click)="updateUser()">
+                    <fa name="pencil" fixed="true" size="1x"></fa></button>
+        </div>
+        <div class="col-sm-4">
             <button class="btn btn-danger btn-sm" (click)="deleteUser()">
-                    <fa name="trash-o" size="1x"></fa></button>
+                    <fa name="trash-o" fixed="true" size="1x"></fa></button>
         </div>
     </div>
 </td>
