finita implementazione CRUD

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <td>{{ user.name }}</td>
-<td>{{ user.lastName }}</td>
+<td>{{ user.lastname }}</td>
 <td>{{ user.email }}</td>
 <td>{{ user.phone }}</td>
 <td>{{ user.province }}</td>
