--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="form-group">
         <label for="lastname">Last Name</label>
-        <input [(ngModel)]="user.lastName" type="text" id="lastname" name="lastname" class="form-control">
+        <input [(ngModel)]="user.lastname" type="text" id="lastname" name="lastname" class="form-control">
     </div>
     <div class="form-group">
         <label for="fiscalcode">Fiscal Code</label>
@@ -25,7 +25,7 @@
         <input [(ngModel)]="user.phone" type="text" id="phone" name="phone" class="form-control">
     </div>
     <div class="form-group">
-        <label for="fiscalcode">Age</label>
+        <label for="age">Age</label>
         <input [(ngModel)]="user.age" type="number" id="age" name="age" class="form-control">
     </div>
     <div class="form-group form-footer text-center buttons">
