--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,15 +7,18 @@
     <div class="row">
         <div class="col-sm-4">
             <button class="btn btn-success btn-sm" (click)="showUserDetail()">
-                        <fa name="info" fixed="true" size="1x"></fa></button>
+                <fa name="info" fixed="true" size="1x"></fa>
+            </button>
         </div>
         <div class="col-sm-4">
             <button class="btn btn-primary btn-sm" (click)="updateUser()">
-                    <fa name="pencil" fixed="true" size="1x"></fa></button>
+                <fa name="pencil" fixed="true" size="1x"></fa>
+            </button>
         </div>
         <div class="col-sm-4">
             <button class="btn btn-danger btn-sm" (click)="deleteUser()">
-                    <fa name="trash-o" fixed="true" size="1x"></fa></button>
+                <fa name="trash-o" fixed="true" size="1x"></fa>
+            </button>
         </div>
     </div>
 </td>
