aggiunto a nav il signin signout

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -67,7 +67,7 @@
                     The min length of field age is {{age.errors.minlength.requiredLength}} characters
                 </div>
                 <div class="alert-danger" *ngIf="age.errors.pattern">
-                    The field age pattern is {{age.errors.pattern.requiredPattern.requiredLength}}
+                    The field age pattern is {{age.errors.pattern.requiredPattern}}
                 </div>
             </div>
     </div>
