--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,35 @@
-<h1>
-  login works!
-</h1>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+    <h1></h1>
+    <form action="" name="loginForm" #form="ngForm" (ngSubmit)="signIn(form)">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input required email ngModel #email="ngModel" type="email" name="email" class="form-control" id="email">
+        <div *ngIf="email.dirty && email.touched && email.invalid">
+          <div class="alert-danger" *ngIf="email.errors.required">
+            The field email is required
+          </div>
+          <div class="alert-danger" *ngIf="email.errors.email">
+            The value must be a valid email
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input required minlength="6" ngModel #password="ngModel" type="password" name="password" class="form-control"
+          id="password">
+          <div *ngIf="password.dirty && password.touched && password.invalid">
+            <div class="alert-danger" *ngIf="password.errors.required">
+              The field password is required
+            </div>
+            <div class="alert-danger" *ngIf="password.errors.minlength">
+              The min length of field password is {{password.errors.minlength.requiredLength}} characters
+            </div>
+          </div>
+      </div>
+      <div class="form-group text-center">
+        <button class="btn btn-primary" [disabled]="!form.valid">Login</button>
+      </div>
+    </form>
+  </div>
+</div>
