--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -24,11 +24,11 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
         <ul class="navbar-nav px-3">
-            <li class="nav-item text-nowrap">
+            <li *ngIf="!isUserLoggedIn" class="nav-item text-nowrap">
                 <a class="nav-link" href="#">Sign In</a>
             </li>
-            <li class="nav-item text-nowrap">
-                <a class="nav-link" href="#">Sign out</a>
+            <li *ngIf="isUserLoggedIn" class="nav-item text-nowrap">
+                <a class="nav-link" (click)="logout($event)" href="#" routerLinkActive="router-link-active" >Sign out</a>
             </li>
         </ul>
     </div>
